// ============================================================
//  PistaGO — Diagrama Entidad-Relación
//  Pedro M. Avilés Aguilera · 2º DAM · IES Portada Alta
//  Pegar en: https://dbdiagram.io
// ============================================================


// ─────────────────────────────────────────────────────────────
//  ENUM: Rol de usuario en el sistema
// ─────────────────────────────────────────────────────────────
enum rol_usuario {
  USUARIO         // Socio estándar
  ADMINISTRADOR   // Encargado del club
  SUPERUSUARIO    // Propietario / desarrollador
}

// ─────────────────────────────────────────────────────────────
//  ENUM: Estado de una reserva
// ─────────────────────────────────────────────────────────────
enum estado_reserva {
  CONFIRMADA
  CANCELADA       // Cancelada (por usuario o admin; ver cancelada_por)
  EXPIRADA        // Lista de espera no confirmada a tiempo
}

// ─────────────────────────────────────────────────────────────
//  ENUM: Tipo de superficie de la pista
// ─────────────────────────────────────────────────────────────
enum tipo_pista {
  TIERRA_BATIDA
  PISTA_DURA
}

// ─────────────────────────────────────────────────────────────
//  ENUM: Tipo de notificación
// ─────────────────────────────────────────────────────────────
enum tipo_notificacion {
  RECORDATORIO_PARTIDO   // 1h antes del partido
  CANCELACION_ADMIN      // Admin cancela tu reserva
  TURNO_ESPERA           // Te toca en la cola
  LIMITE_USO             // Cerca del límite semanal
  CONFIRMACION_RESERVA   // Nueva reserva creada
}


// ─────────────────────────────────────────────────────────────
//  TABLA: usuario
// ─────────────────────────────────────────────────────────────
Table usuario {
  id              bigserial     [pk, increment, note: "PK autogenerada"]
  nombre          varchar(255)  [not null, note: "Nombre completo del socio"]
  email           varchar(255)  [not null, unique, note: "Usado como username para login"]
  password_hash   varchar(255)  [not null, note: "BCrypt hash de la contraseña"]
  rol             rol_usuario   [not null, default: "USUARIO"]
  activo          boolean       [not null, default: true, note: "false = cuenta suspendida"]
  telefono        varchar(255)  [null, note: "Teléfono de contacto, opcional"]
  foto_url        varchar(255)  [null, note: "URL pública del avatar (servida por Nginx)"]
  fcm_token       varchar(255)  [null, note: "Token Firebase para push notifications"]
  reservas_semana int           [not null, default: 0, note: "Contador semanal, resetea cada lunes"]
  created_at      timestamp     [not null, default: `now()`]
  updated_at      timestamp     [not null, default: `now()`]

  indexes {
    email [unique, name: "uk_usuario_email"]
  }

  Note: "Socios del club. Tres roles: USUARIO, ADMINISTRADOR, SUPERUSUARIO"
}


// ─────────────────────────────────────────────────────────────
//  TABLA: pista
// ─────────────────────────────────────────────────────────────
Table pista {
  id              bigserial     [pk, increment]
  nombre          varchar(255)  [not null, note: "Ej: 'Pista 1', 'Pista Central'"]
  tipo            tipo_pista    [not null]
  activa          boolean       [not null, default: true, note: "false = cerrada por mantenimiento"]
  descripcion     varchar(255)  [null, note: "Notas adicionales (iluminación, cubierta, etc.)"]

  Note: "4 pistas del club: 2 tierra batida, 2 pista dura"
}


// ─────────────────────────────────────────────────────────────
//  TABLA: reserva
// ─────────────────────────────────────────────────────────────
Table reserva {
  id              bigserial      [pk, increment]
  usuario_id      bigint         [not null, ref: > usuario.id, note: "FK → usuario que reserva"]
  pista_id        bigint         [not null, ref: > pista.id,   note: "FK → pista reservada"]
  fecha_hora      timestamp      [not null, note: "Inicio de la franja (ej: 2026-04-10 18:00:00)"]
  duracion_min    int            [not null, note: "Duración en minutos (default aplicado en la app: 60)"]
  estado          estado_reserva [not null, default: "CONFIRMADA"]
  cancelada_por   bigint         [null, ref: > usuario.id, note: "FK → usuario o admin que canceló"]
  motivo_cancel   varchar(255)   [null, note: "Razón de cancelación (cuando aplica)"]
  created_at      timestamp      [not null, default: `now()`]
  updated_at      timestamp      [not null, default: `now()`]

  indexes {
    (pista_id, fecha_hora, estado) [name: "idx_pista_fecha_estado",
      note: "Clave para detectar solapamientos al consultar disponibilidad"]
  }

  Note: "Reserva de una pista. Validación: no puede haber dos CONFIRMADAS en la misma pista+franja"
}


// ─────────────────────────────────────────────────────────────
//  TABLA: lista_espera
// ─────────────────────────────────────────────────────────────
Table lista_espera {
  id              bigserial     [pk, increment]
  usuario_id      bigint        [not null, ref: > usuario.id, note: "FK → usuario en espera"]
  pista_id        bigint        [not null, ref: > pista.id,   note: "FK → pista deseada"]
  fecha_hora      timestamp     [not null, note: "Franja horaria deseada"]
  posicion        int           [not null, note: "Snapshot al apuntarse. La posición real se calcula por created_at"]
  notificado      boolean       [not null, default: false, note: "true = se le avisó de disponibilidad"]
  expira_en       timestamp     [null, note: "Límite para confirmar (now + N min tras notificación)"]
  created_at      timestamp     [not null, default: `now()`]

  indexes {
    (pista_id, fecha_hora, created_at) [name: "idx_lista_espera_cola",
      note: "Ordena la cola FIFO por pista+franja+orden de llegada"]
    (usuario_id, pista_id, fecha_hora) [unique, name: "uk_lista_espera_usuario",
      note: "Un usuario no puede estar dos veces en la misma cola"]
  }

  Note: "Cola FIFO por pista y franja. La posición real se recalcula al consultar (orden por created_at)"
}


// ─────────────────────────────────────────────────────────────
//  TABLA: bloqueo_horario
// ─────────────────────────────────────────────────────────────
Table bloqueo_horario {
  id              bigserial     [pk, increment]
  pista_id        bigint        [not null, ref: > pista.id,   note: "FK → pista bloqueada"]
  admin_id        bigint        [not null, ref: > usuario.id, note: "FK → admin que bloquea"]
  fecha_hora      timestamp     [not null, note: "Inicio del bloqueo"]
  duracion_min    int           [not null]
  motivo          varchar(255)  [not null, note: "Ej: 'Mantenimiento', 'Torneo interno'"]

  Note: "Franjas bloqueadas por el admin (mantenimiento, torneos). Impiden reservas en ese tramo"
}


// ─────────────────────────────────────────────────────────────
//  TABLA: notificacion
// ─────────────────────────────────────────────────────────────
Table notificacion {
  id              bigserial          [pk, increment]
  usuario_id      bigint             [not null, ref: > usuario.id, note: "FK → destinatario"]
  reserva_id      bigint             [null, ref: > reserva.id, note: "FK → reserva relacionada (opcional)"]
  tipo            tipo_notificacion  [not null]
  titulo          varchar(255)       [not null]
  mensaje         varchar(255)       [not null]
  leida           boolean            [not null, default: false]
  enviada_push    boolean            [not null, default: false, note: "true = enviada por FCM"]
  created_at      timestamp          [not null, default: `now()`]

  indexes {
    (usuario_id, leida) [name: "idx_notificacion_usuario_leida",
      note: "Acelera la consulta de notificaciones no leídas del usuario"]
  }

  Note: "Historial de notificaciones. Puede ser push (FCM) o solo in-app"
}


// ─────────────────────────────────────────────────────────────
//  TABLA: configuracion_sistema
// ─────────────────────────────────────────────────────────────
Table configuracion_sistema {
  id                          bigint      [pk, note: "Singleton, id=1"]
  max_reservas_semana         int         [not null, default: 5,  note: "Límite semanal por usuario"]
  horas_cancelacion_minima    int         [not null, default: 24, note: "Antelación mínima para cancelar (horas)"]
  minutos_confirmacion_espera int         [not null, default: 10, note: "Minutos para confirmar turno en lista espera"]
  duracion_franja_min         int         [not null, default: 60, note: "Duración estándar de cada franja (minutos)"]
  hora_apertura               time        [not null, note: "Apertura del club (ej: 08:00)"]
  hora_cierre                 time        [not null, note: "Cierre del club (ej: 22:00)"]
  updated_at                  timestamp   [not null, default: `now()`]
  updated_by                  bigint      [null, ref: > usuario.id, note: "FK → admin que modificó"]

  Note: "Tabla singleton (id=1). Parámetros globales modificables solo por SUPERUSUARIO/ADMIN"
}
